# zxp

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ghrepo.rs  main.rs  settings.rs  xbps.rs
