[package]
name = "zxp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"], default-features = false }
exitcode = "1.1.2"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
simplelog = "0.12.2"
temp-dir = "0.1.13"
ureq = { version = "2.9.7", features = ["json"] }
zip = { version = "2.1.3", features = ["deflate"], default-features = false }
